libpam-x2go (0.0.0.1-0~x2go1) UNRELEASED; urgency=low

  * Initial upstream release. Forked from libpam-freerdp.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 09 Nov 2012 01:10:25 +0100